Bug 612129 - Set the initial selection range to the beginning of the text field in order to be more compatible with other browsers; r=roc