layout/forms/nsTextControlFrame.cpp
@@ -387,6 +387,9 @@ nsTextControlFrame::EnsureEditorInitialized()
   // editor.
   mUseEditor = PR_TRUE;
 
+  // Set the selection to the beginning of the text field.
+  SetSelectionEndPoints(0, 0);
+
   return NS_OK;
 }
 
